force-app/main/default/objects/Expense_Item__c/Expense_Item__c.object-meta.xml
<CustomObject>
    <label>Expense_Item</label>
    <nameField>
        <displayFormat>Item-ID{000000}</displayFormat>
        <label>Expense Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense_Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>