force-app/main/default/objects/Expense_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>ProductCategory</referenceTo>
    <relationshipLabel>Expense_Item</relationshipLabel>
    <relationshipName>Expense_Item</relationshipName>
    <type>Lookup</type>
</CustomField>