force-app/main/default/objects/Expense_Item__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expense_Item</relationshipLabel>
    <relationshipName>Expense_Item</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>