force-app/main/default/objects/Expense_Item__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <label>Expense</label>
    <referenceTo>Expense__c</referenceTo>
    <relationshipLabel>Expense_Item</relationshipLabel>
    <relationshipName>Expense_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>