force-app/main/default/objects/Expense_Item__c/validationRules/Expense_Item_Category_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Expense_Item_Category_VR</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Category__c )</errorConditionFormula>
    <errorDisplayField>Category__c</errorDisplayField>
    <errorMessage>Category is Required</errorMessage>
</ValidationRule>