force-app/main/default/objects/Expense_Item__c/validationRules/Expense_Item_Date_Greaterthan_Month_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Expense_Item_Date_Greaterthan_Month_VR</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
    AND(
         Date__c  &gt; TODAY() - 30,
         Date__c  &lt; TODAY()
    )
)</errorConditionFormula>
    <errorMessage>Date Should be within the last 30 days</errorMessage>
</ValidationRule>