force-app/main/default/objects/Expense_Item__c/validationRules/Expense_Item_Date_Lessthan_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Expense_Item_Date_Lessthan_VR</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Date__c )</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Date Must be Lessthan</errorMessage>
</ValidationRule>